--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 
 /* ======== /VARIABLES ======== */
 
-/* ======== COMMON STYLES ======== */
+/* ======== COMMON / reset STYLES ======== */
 body {
   font-family: var(--primary-font);
   color: var(--primary-black-color);
@@ -22,6 +22,12 @@ body {
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
 }
 
 a {
@@ -30,6 +36,12 @@ a {
 
 button {
   cursor: pointer;
+}
+
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto; 
 }
 
 .section-subtitle {
@@ -59,6 +71,21 @@ button {
 /* ======== /COMMON STYLES ======== */
 
 /* ======== HEADER STYLES ======== */
+
+.page-header {
+  border-bottom: 1px solid #e7e9fc;     
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;   
+}
+
 .logo {
   font-family: var(--logo-font);
   font-weight: 700;
@@ -69,11 +96,24 @@ button {
   color: #4d5ae5;
 }
 
+.header-logo {
+  padding: 24px 0;
+  margin-right: 76px;
+}
+
 .header-logo .logo-part {
   color: var(--secondary-black-color);
 }
 
+.nav-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;  
+}
+
 .nav-link {
+  display: block;
+  padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
   color: var(--secondary-black-color);
@@ -81,9 +121,18 @@ button {
 
 .contacts {
   font-style: normal;
+  margin-left: auto;
+}
+
+.contacts-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
 .contacts-link {
+  display: block;
+  padding: 24px 0;
   font-size: 16px;
   color: var(--primary-black-color);
 }
@@ -145,6 +194,10 @@ button {
 .page-footer {
   background-color: var(--secondary-black-color);
 }
+
+/* .footer-container {
+  display: flex;
+} */
 
 .footer-logo .logo-part {
   color: #f4f4fd;
