--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,22 @@ button {
   padding: 120px 0;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .section-subtitle {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -172,8 +187,7 @@ button {
   padding: 16px 32px;
   border: none;
   border-radius: 4px;   
-  margin: 0 auto; 
-  cursor: pointer;  
+  margin: 0 auto;   
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -186,11 +200,19 @@ button {
 .hero-btn:focus {
   background-color: var(--primary-accent-color);
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-}
-
+} 
 /* ======== /HERO SECTION ======== */
 
 /* ======== BENEFITS SECTION ======== */
+
+.benefits-list {
+  display: flex;   
+  gap: 24px;
+}
+
+.benefits-item {
+  width: calc((100% - 3 * 24px) / 4);
+}
 
 /* ======== /BENEFITS SECTION ======== */
 
@@ -207,18 +229,21 @@ box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 
 /* ======== PAGE FOOTER ======== */
 .page-footer {
+  padding: 100px 0;
   background-color: var(--secondary-black-color);
 }
 
-/* .footer-container {
-  display: flex;
-} */
+.footer-logo {   
+  display: inline-block;
+  margin-bottom: 16px;
+}
 
 .footer-logo .logo-part {
   color: #f4f4fd;
 }
 
 .footer-desc {
+  max-width: 264px;
   font-weight: 400;
   font-size: 16px;
   color: #f4f4fd;
