--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,13 @@ ol {
   padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
 }
 
@@ -41,7 +47,7 @@ button {
 .container {
   max-width: 1158px;
   padding: 0 15px;
-  margin: 0 auto; 
+  margin: 0 auto;
 }
 
 .section {
@@ -79,6 +85,7 @@ button {
 }
 
 .section-title {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -90,9 +97,8 @@ button {
 /* ======== /COMMON STYLES ======== */
 
 /* ======== HEADER STYLES ======== */
-
 .page-header {
-  border-bottom: 1px solid #e7e9fc;     
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-container {
@@ -102,7 +108,7 @@ button {
 
 .header-nav {
   display: flex;
-  align-items: center;   
+  align-items: center;
 }
 
 .logo {
@@ -127,7 +133,7 @@ button {
 .nav-list {
   display: flex;
   align-items: center;
-  gap: 40px;  
+  gap: 40px;
 }
 
 .nav-link {
@@ -172,41 +178,40 @@ button {
 
 .main-title {
   max-width: 496px;
-  margin: 0 auto 48px auto;  
+  margin: 0 auto 48px auto;
   text-align: center;
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.07;   
+  line-height: 1.07;
   letter-spacing: 0.02em;
   color: var(--primary-white-color);
 }
 
 .hero-btn {
   display: block;
-  min-width: 169px;   
+  min-width: 169px;
   padding: 16px 32px;
   border: none;
-  border-radius: 4px;   
-  margin: 0 auto;   
+  border-radius: 4px;
+  margin: 0 auto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: var(--primary-white-color);   
+  color: var(--primary-white-color);
   background-color: #4d5ae5;
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--primary-accent-color);
-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-} 
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
 /* ======== /HERO SECTION ======== */
 
 /* ======== BENEFITS SECTION ======== */
-
 .benefits-list {
-  display: flex;   
+  display: flex;
   gap: 24px;
 }
 
@@ -221,11 +226,50 @@ box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #f4f4fd;
 }
 
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
 .team-item {
+  width: calc((100% - 3 * 24px) / 4);
+  border-radius: 0 0 4px 4px;
   background-color: var(--primary-white-color);
 }
 
+.team-item img {
+  display: block;
+}
+
+.team-content {
+  padding: 32px 16px;
+  text-align: center;
+}
+
 /* ======== /TEAM SECTION ======== */
+
+/* ======== PORTFOLIO SECTION ======== */
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+}
+
+.portfolio-item {
+  width: calc((100% - 2 * 24px) / 3);
+}
+
+.portfolio-item img {
+  display: block;
+}
+
+.portfolio-content {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+}
+/* ======== /PORTFOLIO SECTION ======== */
 
 /* ======== PAGE FOOTER ======== */
 .page-footer {
@@ -233,7 +277,7 @@ box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: var(--secondary-black-color);
 }
 
-.footer-logo {   
+.footer-logo {
   display: inline-block;
   margin-bottom: 16px;
 }
